--- a/ArabamCaseApp/ArabamCaseApp/Controllers/Listing/Cells/AdvertListingTableViewCell.xib
+++ b/ArabamCaseApp/ArabamCaseApp/Controllers/Listing/Cells/AdvertListingTableViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sGZ-KH-u1w">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter" translatesAutoresizingMaskIntoConstraints="NO" id="sGZ-KH-u1w">
                         <rect key="frame" x="15" y="5" width="90" height="90"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="sGZ-KH-u1w" secondAttribute="height" id="Ldf-xi-fb1"/>
@@ -74,6 +74,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="filter" width="128" height="128"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
