--- a/ArabamCaseApp/ArabamCaseApp/Controllers/Detail/Cells/UserInfoCell/UserInfoCollectionViewCell.xib
+++ b/ArabamCaseApp/ArabamCaseApp/Controllers/Detail/Cells/UserInfoCell/UserInfoCollectionViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="UserInfoCollectionViewCell" customModule="ArabamCaseApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="383" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="383" height="129"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="383" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="383" height="129"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fA9-3F-SML">
-                        <rect key="frame" x="0.0" y="0.0" width="383" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="383" height="129"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZe-08-wgR">
                                 <rect key="frame" x="0.0" y="0.0" width="383" height="1"/>
@@ -29,64 +29,56 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fei-e7-YGK">
-                                <rect key="frame" x="0.0" y="119" width="383" height="1"/>
+                                <rect key="frame" x="0.0" y="128" width="383" height="1"/>
                                 <color key="backgroundColor" systemColor="separatorColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="zTj-Dn-gGx"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Acillll Sahibinden Opel Corsa 1.3 CDTI Essentia 2013 Model" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwe-jM-ktL">
-                                <rect key="frame" x="20" y="15.999999999999998" width="343" height="31.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwe-jM-ktL">
+                                <rect key="frame" x="20" y="15.999999999999996" width="343" height="46.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="İzmir-Menemen" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="al0-IK-9AO">
-                                <rect key="frame" x="20" y="52.333333333333336" width="343" height="13.000000000000007"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="13" id="ReX-RN-pgb"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
-                                <color key="textColor" systemColor="secondaryLabelColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100.000 TL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UG1-9o-guj">
-                                <rect key="frame" x="20" y="82" width="180" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="180" id="b1l-sb-bIF"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="1.000.000 TL" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UG1-9o-guj">
+                                <rect key="frame" x="19.999999999999993" y="91" width="114.33333333333331" height="22"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sylvia Cuevas" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ZH-9k-pza">
-                                <rect key="frame" x="213" y="87" width="150" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="PLO-np-vk7"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sylvia Cuevas bfdbsfdbsdfbbfdbs" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ZH-9k-pza">
+                                <rect key="frame" x="233.33333333333337" y="79.333333333333329" width="134.66666666666663" height="33.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="İzmir-Menemen" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="al0-IK-9AO">
+                                <rect key="frame" x="20" y="67.666666666666671" width="84" height="13.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
+                                <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="al0-IK-9AO" secondAttribute="trailing" constant="20" id="6bD-N1-XuP"/>
                             <constraint firstAttribute="trailing" secondItem="fei-e7-YGK" secondAttribute="trailing" id="9Kv-af-Zdl"/>
-                            <constraint firstItem="fei-e7-YGK" firstAttribute="top" secondItem="4ZH-9k-pza" secondAttribute="bottom" constant="15" id="AYU-9G-yWx"/>
-                            <constraint firstItem="fei-e7-YGK" firstAttribute="top" secondItem="UG1-9o-guj" secondAttribute="bottom" constant="15" id="CRf-wM-vaV"/>
-                            <constraint firstItem="al0-IK-9AO" firstAttribute="top" secondItem="jwe-jM-ktL" secondAttribute="bottom" constant="5" id="J62-tL-phJ"/>
-                            <constraint firstAttribute="trailing" secondItem="jwe-jM-ktL" secondAttribute="trailing" constant="20" id="MNA-F0-S8Y"/>
-                            <constraint firstItem="al0-IK-9AO" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="NvL-3P-iss"/>
+                            <constraint firstItem="fei-e7-YGK" firstAttribute="top" secondItem="4ZH-9k-pza" secondAttribute="bottom" constant="15" id="Bgz-Ea-gZP"/>
+                            <constraint firstAttribute="trailing" secondItem="jwe-jM-ktL" secondAttribute="trailing" constant="20" symbolic="YES" id="HPV-ve-cHA"/>
+                            <constraint firstItem="al0-IK-9AO" firstAttribute="top" secondItem="jwe-jM-ktL" secondAttribute="bottom" constant="5" id="HVW-MX-1Xv"/>
+                            <constraint firstItem="jwe-jM-ktL" firstAttribute="top" secondItem="XZe-08-wgR" secondAttribute="bottom" constant="15" id="Pxq-l2-wip"/>
                             <constraint firstItem="XZe-08-wgR" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" id="QCQ-de-Mdv"/>
                             <constraint firstItem="XZe-08-wgR" firstAttribute="top" secondItem="fA9-3F-SML" secondAttribute="top" id="Tsz-WP-ijb"/>
                             <constraint firstAttribute="bottom" secondItem="fei-e7-YGK" secondAttribute="bottom" id="XJU-Lj-fT6"/>
-                            <constraint firstItem="jwe-jM-ktL" firstAttribute="top" secondItem="XZe-08-wgR" secondAttribute="bottom" constant="15" id="XNj-S1-xYK"/>
+                            <constraint firstItem="jwe-jM-ktL" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="YM4-iz-Yx1"/>
                             <constraint firstItem="fei-e7-YGK" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" id="aqd-Dn-nus"/>
-                            <constraint firstItem="UG1-9o-guj" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="dAf-kH-tr3"/>
-                            <constraint firstAttribute="trailing" secondItem="4ZH-9k-pza" secondAttribute="trailing" constant="20" id="dgV-ik-vZR"/>
+                            <constraint firstItem="UG1-9o-guj" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="fMg-I5-4qD"/>
+                            <constraint firstItem="al0-IK-9AO" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="g8T-3d-TQB"/>
+                            <constraint firstItem="fei-e7-YGK" firstAttribute="top" secondItem="UG1-9o-guj" secondAttribute="bottom" constant="15" id="kk8-IB-V9u"/>
+                            <constraint firstAttribute="trailing" secondItem="4ZH-9k-pza" secondAttribute="trailing" constant="15" id="oQs-Uz-AB6"/>
+                            <constraint firstItem="4ZH-9k-pza" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UG1-9o-guj" secondAttribute="trailing" constant="8" id="oc7-jY-k2w"/>
                             <constraint firstAttribute="trailing" secondItem="XZe-08-wgR" secondAttribute="trailing" id="qVn-ly-tQt"/>
-                            <constraint firstItem="jwe-jM-ktL" firstAttribute="leading" secondItem="fA9-3F-SML" secondAttribute="leading" constant="20" id="zKZ-Fg-sBm"/>
+                            <constraint firstItem="UG1-9o-guj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="al0-IK-9AO" secondAttribute="bottom" constant="8" id="zjr-yk-PJv"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -98,14 +90,14 @@
                 <constraint firstItem="fA9-3F-SML" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="T5V-Mg-87b"/>
                 <constraint firstItem="fA9-3F-SML" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="TUV-vg-G6n"/>
             </constraints>
-            <size key="customSize" width="383" height="120"/>
+            <size key="customSize" width="383" height="129"/>
             <connections>
                 <outlet property="cityLabel" destination="al0-IK-9AO" id="YEr-Sp-3RX"/>
                 <outlet property="nameLabel" destination="4ZH-9k-pza" id="436-hM-Ya0"/>
                 <outlet property="priceLabel" destination="UG1-9o-guj" id="2W6-1E-e00"/>
                 <outlet property="titleLabel" destination="jwe-jM-ktL" id="th6-4s-ikm"/>
             </connections>
-            <point key="canvasLocation" x="220.61068702290075" y="44.366197183098592"/>
+            <point key="canvasLocation" x="220.61068702290075" y="47.535211267605639"/>
         </collectionViewCell>
     </objects>
     <resources>
