--- a/ArabamCaseApp/ArabamCaseApp/Controllers/Listing/Cells/AdvertListingTableViewCell.xib
+++ b/ArabamCaseApp/ArabamCaseApp/Controllers/Listing/Cells/AdvertListingTableViewCell.xib
@@ -11,56 +11,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="AdvertListingTableViewCell" customModule="ArabamCaseApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="AdvertListingTableViewCell" customModule="ArabamCaseApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="393" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sGZ-KH-u1w">
-                        <rect key="frame" x="15" y="5" width="90" height="90"/>
+                        <rect key="frame" x="15" y="5" width="110" height="110"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="sGZ-KH-u1w" secondAttribute="height" id="Ldf-xi-fb1"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npH-P2-UFM">
-                        <rect key="frame" x="113" y="8" width="268" height="17"/>
+                        <rect key="frame" x="135" y="8" width="248" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="65.000 TL" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYD-84-cNb">
-                        <rect key="frame" x="271" y="75.666666666666671" width="110" height="14.333333333333329"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100.000.000 TL" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YYD-84-cNb">
+                        <rect key="frame" x="287.33333333333331" y="95.666666666666671" width="93.666666666666686" height="14.333333333333329"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="110" id="mnG-3K-QKf"/>
+                            <constraint firstAttribute="height" constant="14.33" id="bZZ-yN-2Km"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                         <color key="textColor" systemColor="systemPinkColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Aksaray/Merkez" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVn-wC-KrZ">
-                        <rect key="frame" x="113" y="78" width="120" height="12"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="120" id="igj-Rw-VeX"/>
-                            <constraint firstAttribute="height" constant="12" id="yWn-6f-sNM"/>
-                        </constraints>
+                        <rect key="frame" x="135" y="95.666666666666671" width="94" height="14.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="YYD-84-cNb" secondAttribute="trailing" constant="12" id="5WC-EZ-wUc"/>
-                    <constraint firstAttribute="trailing" secondItem="npH-P2-UFM" secondAttribute="trailing" constant="12" id="8Hi-gd-ESm"/>
+                    <constraint firstItem="YYD-84-cNb" firstAttribute="centerY" secondItem="cVn-wC-KrZ" secondAttribute="centerY" id="276-gK-Gmr"/>
                     <constraint firstItem="sGZ-KH-u1w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="BW9-6s-bPL"/>
-                    <constraint firstItem="cVn-wC-KrZ" firstAttribute="leading" secondItem="sGZ-KH-u1w" secondAttribute="trailing" constant="8" id="DRO-mD-mMi"/>
-                    <constraint firstItem="cVn-wC-KrZ" firstAttribute="bottom" secondItem="sGZ-KH-u1w" secondAttribute="bottom" constant="-5" id="E1J-UN-QoY"/>
+                    <constraint firstAttribute="trailing" secondItem="YYD-84-cNb" secondAttribute="trailing" constant="12" id="Bh6-is-TBG"/>
+                    <constraint firstAttribute="bottom" secondItem="cVn-wC-KrZ" secondAttribute="bottom" constant="10" id="HOy-Ry-cRh"/>
+                    <constraint firstItem="YYD-84-cNb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cVn-wC-KrZ" secondAttribute="trailing" constant="8" id="Lpk-7D-4UV"/>
                     <constraint firstAttribute="bottom" secondItem="sGZ-KH-u1w" secondAttribute="bottom" constant="5" id="N7t-ol-kpx"/>
-                    <constraint firstItem="npH-P2-UFM" firstAttribute="leading" secondItem="sGZ-KH-u1w" secondAttribute="trailing" constant="8" id="NTt-uf-Rxr"/>
+                    <constraint firstAttribute="trailing" secondItem="npH-P2-UFM" secondAttribute="trailing" constant="10" id="Sf5-HK-SIM"/>
+                    <constraint firstItem="npH-P2-UFM" firstAttribute="leading" secondItem="sGZ-KH-u1w" secondAttribute="trailing" constant="10" id="dgY-sy-2fq"/>
                     <constraint firstItem="sGZ-KH-u1w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="fAV-IV-CrN"/>
-                    <constraint firstItem="YYD-84-cNb" firstAttribute="bottom" secondItem="cVn-wC-KrZ" secondAttribute="bottom" id="ji3-YC-soz"/>
-                    <constraint firstItem="npH-P2-UFM" firstAttribute="top" secondItem="sGZ-KH-u1w" secondAttribute="top" constant="3" id="wkP-ST-SP2"/>
+                    <constraint firstItem="npH-P2-UFM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="kFV-ff-Y6x"/>
+                    <constraint firstItem="cVn-wC-KrZ" firstAttribute="leading" secondItem="sGZ-KH-u1w" secondAttribute="trailing" constant="10" id="nLB-ga-Swh"/>
+                    <constraint firstItem="YYD-84-cNb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="npH-P2-UFM" secondAttribute="bottom" constant="8" id="pwJ-Kz-NeU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -70,7 +68,7 @@
                 <outlet property="priceLabel" destination="YYD-84-cNb" id="LVm-Fx-OSS"/>
                 <outlet property="titleLabel" destination="npH-P2-UFM" id="NQf-Z8-4YY"/>
             </connections>
-            <point key="canvasLocation" x="92.36641221374046" y="37.323943661971832"/>
+            <point key="canvasLocation" x="92.36641221374046" y="43.661971830985919"/>
         </tableViewCell>
     </objects>
     <resources>
