--- a/ArabamCaseApp/ArabamCaseApp/Controllers/Detail/Cells/UserInfoCell/UserInfoCollectionViewCell.xib
+++ b/ArabamCaseApp/ArabamCaseApp/Controllers/Detail/Cells/UserInfoCell/UserInfoCollectionViewCell.xib
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fA9-3F-SML">
-                        <rect key="frame" x="0.0" y="0.0" width="383" height="129"/>
+                        <rect key="frame" x="0.0" y="0.0" width="383" height="124"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZe-08-wgR">
                                 <rect key="frame" x="0.0" y="0.0" width="383" height="1"/>
@@ -29,33 +29,33 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fei-e7-YGK">
-                                <rect key="frame" x="0.0" y="128" width="383" height="1"/>
+                                <rect key="frame" x="0.0" y="123" width="383" height="1"/>
                                 <color key="backgroundColor" systemColor="separatorColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="zTj-Dn-gGx"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwe-jM-ktL">
-                                <rect key="frame" x="20" y="15.999999999999996" width="343" height="48.666666666666657"/>
+                                <rect key="frame" x="20" y="15.999999999999996" width="343" height="43.666666666666657"/>
                                 <string key="text">Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa Acillll Sahibinden Opel Corsa </string>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="1.000.000 TL" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UG1-9o-guj">
-                                <rect key="frame" x="19.999999999999993" y="91" width="114.33333333333331" height="22"/>
+                                <rect key="frame" x="19.999999999999993" y="86" width="114.33333333333331" height="22"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sylvia Cuevas bfdbsfdbsdfbbfdbs" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ZH-9k-pza">
-                                <rect key="frame" x="233.33333333333337" y="79.333333333333329" width="134.66666666666663" height="33.666666666666671"/>
+                                <rect key="frame" x="233.33333333333337" y="74.333333333333329" width="134.66666666666663" height="33.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="İzmir-Menemen" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="al0-IK-9AO">
-                                <rect key="frame" x="20" y="69.666666666666671" width="84" height="13.333333333333329"/>
+                                <rect key="frame" x="20" y="64.666666666666671" width="84" height="13.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="fA9-3F-SML" secondAttribute="bottom" id="ACn-FO-C1s"/>
+                <constraint firstAttribute="bottom" secondItem="fA9-3F-SML" secondAttribute="bottom" constant="5" id="ACn-FO-C1s"/>
                 <constraint firstAttribute="trailing" secondItem="fA9-3F-SML" secondAttribute="trailing" id="Oyp-wM-Zzx"/>
                 <constraint firstItem="fA9-3F-SML" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="T5V-Mg-87b"/>
                 <constraint firstItem="fA9-3F-SML" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="TUV-vg-G6n"/>
